Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20044

tunefs.lustre --help threw "tunefs.lustre: exiting with 1 (Operation not permitted)"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      # tunefs.lustre -h /dev/nvme0n1 
      checking for existing Lustre data: found
      
         Read previous values:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  test
      Mount type: ldiskfs
      Flags:      0x4
                    (MGS )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
      
      usage: tunefs.lustre <target type> --backfstype=ldiskfs --fsname=<filesystem name>
      	--index=<target index> [options] <device>
      
      
      	target types:
      		--mgs: configuration management service
      		--nomgs: turn off MGS service on this MDT
      	options (in order of popularity):
      		--index=#N: numerical target index (0..N)
      			required for all targets other than the MGS,
      			target index may either be a decimal number or
      			hexadecimal number starting with '0x'
      		--fsname=<8_char_filesystem_name>: fs targets belong to
      			required for all targets other than MGS
      		--mgsnode=<nid>[,<...>]: NID(s) of remote MGS
      			required for all targets other than MGS
      		--mountfsoptions=<opts>: permanent Lustre mount options
      		--backfs-mount-opts=<opts>: backing fs mount options
      		--failnode=<nid>[,<...>]: NID(s) of backup failover node
      			mutually exclusive with --servicenode
      		--servicenode=<nid>[,<...>]: NID(s) of service partners
      			treat nodes as equal service node, mutually exclusive with --failnode
      		--param <key>=<value>: set a permanent parameter
      			e.g. --param sys.timeout=40
      			     --param lov.stripesize=2M
      		--network=<net>[,<...>]: restrict OST/MDT to network(s)
      		--erase-param <key>: erase all instances of a parameter
      		--erase-params: erase all old parameter settings
      		--writeconf: erase all config logs for this fs.
      		--nolocallogs: use logs from MGS, not local ones.
      		--quota: enable space accounting on old 2.x device.
      		--rename: rename the filesystem name
      		--mountdata-reset-from=<dev|file>: reset CONFIGS/mountdata file.
      		--replace: replace an old target with the same index
      		--comment=<user comment>: arbitrary string (824 bytes)
      		--dryrun: report what we would do; don't write to disk
      		--verbose: e.g. show mkfs progress
      		--force-nohostid: Ignore hostid requirement for ZFS import
      		-V|--version: output build version of the utility and
      			exit
      		--quiet
      tunefs.lustre: exiting with 1 (Operation not permitted)
      

            xyang Xiao Yang
            xyang Xiao Yang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: