LU-20044 utils: Improve tunefs.lustre -h/--help

Don't print lustre disk data and throw "(Operation not permitted)"
for tunefs.lustre -h/--help /dev/xxx.

Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: I54a5c4d245f829f26904c39a8b193b65693e26eb
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64913
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>